plugins/xpath/xpath-lang/testData/xslt/highlighting/invalidPattern1.xsl
<xsl:stylesheet version="1.1" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">

  <xsl:template match='<error descr="Bad pattern">count(*) = 0</error>' />

</xsl:stylesheet>